[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wayback4ai"
version = "0.1.0"
description = "A data harvester for the Internet Archive. Combines Wayback Machine's CDX/Availability APIs with Crawl4AI to capture, extract, and convert historical web pages into LLM-ready Markdown"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests>=2.32.5",
    "joblib>=1.3.0",
    "tenacity>=8.2.0",
    "tqdm>=4.67.2",
    "crawl4ai>=0.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[tool.hatch.build.targets.wheel]
packages = ["wayback4ai"]
